Tried to fix graphs on mobiles

--- a/stats/stats.scss
+++ b/stats/stats.scss
@@ -47,10 +47,6 @@ main {
 						color: $text-color-dark;
 					}
 				}
-				canvas {
-					width: 100%;
-					height: 300px;
-				}
 			}
 		}
 
